# CppCMakeVcpkgTemplate

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: clang-format.cmake  sanitizer.cmake
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_main.cpp
